@@ -1,5 +1,9 @@
 CHANGES IN FLTK 1.1.4
 
+	- Fl_Text_Editor didn't scroll the buffer when the user
+	  pressed Ctrl+End or Ctrl+Home.
+	- Fl_Text_Editor didn't show its cursor when the mouse
+	  was moved inside the window.
 	- FLUID now uses an Fl_Text_Display widget for command
 	  output, which allows you to copy and paste text from
 	  command output into other windows.
